[gd_scene load_steps=3 format=3 uid="uid://bqh3nxjy5v8g4"]

[ext_resource type="PackedScene" uid="uid://h2augxohyp55" path="res://scenes/info_modal.tscn" id="1_base"]
[ext_resource type="Script" path="res://map_editor_panel.gd" id="2_script"]

[node name="MapEditorPanel" instance=ExtResource("1_base")]
anchors_preset = 9
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.25
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
script = ExtResource("2_script")

[node name="Region" parent="Panel" index="0"]
visible = false

[node name="Army" parent="Panel" index="1"]
visible = false

[node name="Content" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="IDRow" type="HBoxContainer" parent="Panel/Content"]
layout_mode = 2

[node name="IDLabel" type="Label" parent="Panel/Content/IDRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "Region ID:"

[node name="IDValue" type="Label" parent="Panel/Content/IDRow"]
layout_mode = 2
text = "-"

[node name="NameRow" type="HBoxContainer" parent="Panel/Content"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Panel/Content/NameRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "Name:"

[node name="NameEdit" type="LineEdit" parent="Panel/Content/NameRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TypeRow" type="HBoxContainer" parent="Panel/Content"]
layout_mode = 2

[node name="TypeLabel" type="Label" parent="Panel/Content/TypeRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "Region type:"

[node name="TypeOption" type="OptionButton" parent="Panel/Content/TypeRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LevelRow" type="HBoxContainer" parent="Panel/Content"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="Panel/Content/LevelRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "Region level:"

[node name="LevelOption" type="OptionButton" parent="Panel/Content/LevelRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PopulationRow" type="HBoxContainer" parent="Panel/Content"]
layout_mode = 2

[node name="PopulationLabel" type="Label" parent="Panel/Content/PopulationRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "Population:"

[node name="PopulationEdit" type="LineEdit" parent="Panel/Content/PopulationRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "0"

[node name="CastleRow" type="HBoxContainer" parent="Panel/Content"]
layout_mode = 2

[node name="CastleLabel" type="Label" parent="Panel/Content/CastleRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "Castle level:"

[node name="CastleOption" type="OptionButton" parent="Panel/Content/CastleRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OwnershipRow" type="HBoxContainer" parent="Panel/Content"]
layout_mode = 2

[node name="OwnershipLabel" type="Label" parent="Panel/Content/OwnershipRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "Ownership:"

[node name="OwnershipOption" type="OptionButton" parent="Panel/Content/OwnershipRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ArmyRow" type="HBoxContainer" parent="Panel/Content"]
layout_mode = 2

[node name="ArmyLabel" type="Label" parent="Panel/Content/ArmyRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "Army:"

[node name="ArmyToggleButton" type="Button" parent="Panel/Content/ArmyRow"]
layout_mode = 2
size_flags_horizontal = 3
text = ""

[node name="ArmyEditRow" type="HBoxContainer" parent="Panel/Content"]
layout_mode = 2

[node name="ArmyEditLabel" type="Label" parent="Panel/Content/ArmyEditRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "Edit:"

[node name="EditArmyButton" type="Button" parent="Panel/Content/ArmyEditRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Edit Army"



[node name="ResourcesLabel" type="Label" parent="Panel/Content"]
layout_mode = 2
text = "Resources:"

[node name="FoodRow" type="HBoxContainer" parent="Panel/Content"]
layout_mode = 2

[node name="FoodLabel" type="Label" parent="Panel/Content/FoodRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "FOOD"

[node name="FoodEdit" type="LineEdit" parent="Panel/Content/FoodRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "0"

[node name="WoodRow" type="HBoxContainer" parent="Panel/Content"]
layout_mode = 2

[node name="WoodLabel" type="Label" parent="Panel/Content/WoodRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "WOOD"

[node name="WoodEdit" type="LineEdit" parent="Panel/Content/WoodRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "0"

[node name="StoneRow" type="HBoxContainer" parent="Panel/Content"]
layout_mode = 2

[node name="StoneLabel" type="Label" parent="Panel/Content/StoneRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "STONE"

[node name="StoneEdit" type="LineEdit" parent="Panel/Content/StoneRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "0"

[node name="IronRow" type="HBoxContainer" parent="Panel/Content"]
layout_mode = 2

[node name="IronLabel" type="Label" parent="Panel/Content/IronRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "IRON"

[node name="IronEdit" type="LineEdit" parent="Panel/Content/IronRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "0"

[node name="GoldRow" type="HBoxContainer" parent="Panel/Content"]
layout_mode = 2

[node name="GoldLabel" type="Label" parent="Panel/Content/GoldRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "GOLD"

[node name="GoldEdit" type="LineEdit" parent="Panel/Content/GoldRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "0"

[node name="OreRow" type="HBoxContainer" parent="Panel/Content"]
layout_mode = 2

[node name="OreLabel" type="Label" parent="Panel/Content/OreRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "Ore discovered:"

[node name="OreCheck" type="CheckBox" parent="Panel/Content/OreRow"]
layout_mode = 2

[node name="SaveRow" type="HBoxContainer" parent="Panel/Content"]
layout_mode = 2

[node name="SaveLabel" type="Label" parent="Panel/Content/SaveRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "Scenario Save:"

[node name="ScenarioNameEdit" type="LineEdit" parent="Panel/Content/SaveRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "scenario_name"

[node name="SaveButtonRow" type="HBoxContainer" parent="Panel/Content"]
layout_mode = 2

[node name="SaveScenarioButton" type="Button" parent="Panel/Content/SaveButtonRow"]
layout_mode = 2
text = "Save Scenario"

[node name="LoadScenarioSelectRow" type="HBoxContainer" parent="Panel/Content"]
layout_mode = 2

[node name="ScenarioSelect" type="OptionButton" parent="Panel/Content/LoadScenarioSelectRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LoadScenarioButtonRow" type="HBoxContainer" parent="Panel/Content"]
layout_mode = 2

[node name="LoadScenarioButton" type="Button" parent="Panel/Content/LoadScenarioButtonRow"]
layout_mode = 2
text = "Load"

[node name="ArmyPanel" type="Panel" parent="."]
visible = false
anchors_preset = 9
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="ArmyContent" type="VBoxContainer" parent="ArmyPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ArmyHeaderRow" type="HBoxContainer" parent="ArmyPanel/ArmyContent"]
layout_mode = 2

[node name="ArmyHeader" type="Label" parent="ArmyPanel/ArmyContent/ArmyHeaderRow"]
layout_mode = 2
text = "Army Editor"

[node name="CloseArmyButton" type="Button" parent="ArmyPanel/ArmyContent/ArmyHeaderRow"]
layout_mode = 2
size_flags_horizontal = 8
text = "Close"

[node name="RegionIDRow" type="HBoxContainer" parent="ArmyPanel/ArmyContent"]
layout_mode = 2

[node name="RegionIDLabel" type="Label" parent="ArmyPanel/ArmyContent/RegionIDRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "Region ID:"

[node name="RegionIDValue" type="Label" parent="ArmyPanel/ArmyContent/RegionIDRow"]
layout_mode = 2
text = "-"

[node name="RegionNameRow" type="HBoxContainer" parent="ArmyPanel/ArmyContent"]
layout_mode = 2

[node name="RegionNameLabel" type="Label" parent="ArmyPanel/ArmyContent/RegionNameRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "Region Name:"

[node name="RegionNameValue" type="Label" parent="ArmyPanel/ArmyContent/RegionNameRow"]
layout_mode = 2
text = "-"

[node name="ArmyNameRow" type="HBoxContainer" parent="ArmyPanel/ArmyContent"]
layout_mode = 2

[node name="ArmyNameLabel" type="Label" parent="ArmyPanel/ArmyContent/ArmyNameRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "Army Name:"

[node name="ArmyNameValue" type="Label" parent="ArmyPanel/ArmyContent/ArmyNameRow"]
layout_mode = 2
text = "-"

[node name="UnitsLabel" type="Label" parent="ArmyPanel/ArmyContent"]
layout_mode = 2
text = "Units:"

[node name="PeasantsRow" type="HBoxContainer" parent="ArmyPanel/ArmyContent"]
layout_mode = 2

[node name="PeasantsLabel" type="Label" parent="ArmyPanel/ArmyContent/PeasantsRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "Peasants"

[node name="PeasantsEdit" type="LineEdit" parent="ArmyPanel/ArmyContent/PeasantsRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "0"

[node name="SpearmenRow" type="HBoxContainer" parent="ArmyPanel/ArmyContent"]
layout_mode = 2

[node name="SpearmenLabel" type="Label" parent="ArmyPanel/ArmyContent/SpearmenRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "Spearmen"

[node name="SpearmenEdit" type="LineEdit" parent="ArmyPanel/ArmyContent/SpearmenRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "0"

[node name="SwordsmenRow" type="HBoxContainer" parent="ArmyPanel/ArmyContent"]
layout_mode = 2

[node name="SwordsmenLabel" type="Label" parent="ArmyPanel/ArmyContent/SwordsmenRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "Swordsmen"

[node name="SwordsmenEdit" type="LineEdit" parent="ArmyPanel/ArmyContent/SwordsmenRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "0"

[node name="ArchersRow" type="HBoxContainer" parent="ArmyPanel/ArmyContent"]
layout_mode = 2

[node name="ArchersLabel" type="Label" parent="ArmyPanel/ArmyContent/ArchersRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "Archers"

[node name="ArchersEdit" type="LineEdit" parent="ArmyPanel/ArmyContent/ArchersRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "0"

[node name="CrossbowmenRow" type="HBoxContainer" parent="ArmyPanel/ArmyContent"]
layout_mode = 2

[node name="CrossbowmenLabel" type="Label" parent="ArmyPanel/ArmyContent/CrossbowmenRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "Crossbowmen"

[node name="CrossbowmenEdit" type="LineEdit" parent="ArmyPanel/ArmyContent/CrossbowmenRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "0"

[node name="HorsemenRow" type="HBoxContainer" parent="ArmyPanel/ArmyContent"]
layout_mode = 2

[node name="HorsemenLabel" type="Label" parent="ArmyPanel/ArmyContent/HorsemenRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "Horsemen"

[node name="HorsemenEdit" type="LineEdit" parent="ArmyPanel/ArmyContent/HorsemenRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "0"

[node name="KnightsRow" type="HBoxContainer" parent="ArmyPanel/ArmyContent"]
layout_mode = 2

[node name="KnightsLabel" type="Label" parent="ArmyPanel/ArmyContent/KnightsRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "Knights"

[node name="KnightsEdit" type="LineEdit" parent="ArmyPanel/ArmyContent/KnightsRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "0"

[node name="MountedKnightsRow" type="HBoxContainer" parent="ArmyPanel/ArmyContent"]
layout_mode = 2

[node name="MountedKnightsLabel" type="Label" parent="ArmyPanel/ArmyContent/MountedKnightsRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "Mounted Knights"

[node name="MountedKnightsEdit" type="LineEdit" parent="ArmyPanel/ArmyContent/MountedKnightsRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "0"

[node name="RoyalGuardRow" type="HBoxContainer" parent="ArmyPanel/ArmyContent"]
layout_mode = 2

[node name="RoyalGuardLabel" type="Label" parent="ArmyPanel/ArmyContent/RoyalGuardRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 0)
text = "Royal Guard"

[node name="RoyalGuardEdit" type="LineEdit" parent="ArmyPanel/ArmyContent/RoyalGuardRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "0"
